--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,900;1,300;1,400;1,500;1,900&display=swap");
+
 *,
 *::after,
 *::before {
@@ -6,6 +8,9 @@
 
 body {
   margin: 0;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-style: normal;
 }
 
 header {
@@ -20,10 +25,12 @@ header p {
 }
 
 main {
+  min-height: calc(100vh - 77.6px);
   background-color: #b1afafb7;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 400px));
   grid-auto-rows: auto;
+  align-items: center;
   justify-content: space-around;
 }
 
@@ -46,13 +53,23 @@ main {
   max-width: 70%;
 }
 
-button {
+.button {
   padding: 15px 20px;
-  background-color: #ffcc01;
   border-radius: 5px;
   cursor: pointer;
   outline: none;
   border: none;
+}
+
+.button.close-modal {
+  align-self: flex-end;
+  background-color: #000000;
+  color: #ffffff;
+}
+
+.button.add-book,
+.button.submit {
+  background-color: #ffcc01;
 }
 
 .bg-black {
@@ -81,17 +98,27 @@ button {
 }
 
 form {
+  max-width: 700px;
+  margin: 0 auto;
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 60px;
   justify-content: center;
   align-items: center;
 }
 
+input {
+  padding: 10px 15px;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+}
+
 .form-content {
   display: flex;
+  flex-direction: column;
   gap: 20px;
   justify-content: center;
   align-items: center;
