--- a/style.css
+++ b/style.css
@@ -107,6 +107,15 @@ form {
   gap: 60px;
   justify-content: center;
   align-items: center;
+  color: #000000;
+}
+
+label {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+  color: #ffffff;
 }
 
 input {
@@ -116,10 +125,42 @@ input {
   border: none;
 }
 
+input:invalid {
+  border-color: #900;
+  background-color: #fdd;
+}
+
+input:focus:invalid {
+  outline: none;
+}
+
+.error {
+  width: 100%;
+  display: none;
+  background-color: #ffffff;
+  font-size: 80%;
+  color: white;
+  border-radius: 5px;
+  padding: 0.5em;
+
+  box-sizing: border-box;
+}
+
+label.invalid,
+.invalid input,
+.invalid .error {
+  color: red;
+  border-color: red;
+}
+
+.invalid .error {
+  display: block;
+}
+
 .form-content {
   display: flex;
   flex-direction: column;
   gap: 20px;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
